[package]
name = "blobfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "1.3.3"
failure = "0.1.8"
failure_derive = "0.1.8"
rand = "0.8.5"
hmap = {path = "../hmap"} # 相对路径获取